Add gotenberg to platform-api
